# geoip

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
docs/: openapi.yaml
docs/superpowers/plans/: 2026-06-16-geoip-rest-api.md
docs/superpowers/specs/: 2026-06-16-geoip-rest-api-design.md
src/: cli.rs  download.rs  error.rs  geoip.rs  lib.rs  main.rs  routes.rs
tests/: api.rs
